@@ -1,2 +1,3 @@
 doc/cdbs-doc.html
 doc/cdbs-doc.pdf
+doc/*.png
